# robot-test

./: .gitignore  LICENSE.txt  README.md  interactive_console_output.xml  log.html  output.xml  pyproject.toml  report.html
src/robot_test/: .gitignore  AppTests.robot  Application.py  Test.py  __about__.py  __init__.py  calculator_tests.robot  control.py  event_logger.py  keyword_logger.py  locator.py  test_logger.py
src/robot_test/logging_config/: stdout.json
src/robot_test/tests/: Application.py  Test.py  calculator_tests.robot  control.py
